force-app/main/default/objects/Account/fields/Mercado_Natural__c.field-meta.xml
<CustomField>
    <fullName>Mercado_Natural__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mercado Natural</label>
    <type>Checkbox</type>
</CustomField>