force-app/main/default/objects/Account/fields/Meses_en_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Meses_en_Servicio__c</fullName>
    <label>Meses en Servicio</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>