force-app/main/default/objects/Account/fields/Metlife__c.field-meta.xml
<CustomField>
    <fullName>Metlife__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metlife</label>
    <type>Checkbox</type>
</CustomField>