force-app/main/default/objects/Account/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Estado_del_Asesor__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Exclusividad</fullName>
            </value>
            <value>
                <fullName>No cumple perfil</fullName>
            </value>
            <value>
                <fullName>Retención de Primas</fullName>
            </value>
            <value>
                <fullName>Viaje</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>