force-app/main/default/objects/Account/fields/Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nacionalidad</label>
    <referenceTo>Ciudades__c</referenceTo>
    <relationshipLabel>Cuentas (Nacionalidad)</relationshipLabel>
    <relationshipName>Cuentas3</relationshipName>
    <type>Lookup</type>
</CustomField>