force-app/main/default/objects/Account/fields/NivelEducacion__c.field-meta.xml
<CustomField>
    <fullName>NivelEducacion__c</fullName>
    <label>Nivel de educación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Básica</fullName>
            </value>
            <value>
                <fullName>Especialización</fullName>
            </value>
            <value>
                <fullName>Maestría</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Profesional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>