force-app/main/default/objects/Account/fields/NombreColegio_Jardin__c.field-meta.xml
<CustomField>
    <fullName>NombreColegio_Jardin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del Colegio /Jardín</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>