force-app/main/default/objects/Account/fields/NumeroDocumento__c.field-meta.xml
<CustomField>
    <fullName>NumeroDocumento__c</fullName>
    <externalId>true</externalId>
    <label>Número de Documento</label>
    <length>40</length>
    <type>Text</type>
</CustomField>