force-app/main/default/objects/Account/fields/Objetivo_Apertura_Clave_con_Global__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_Apertura_Clave_con_Global__c</fullName>
    <label>Objetivo Apertura Clave con Global</label>
    <type>TextArea</type>
</CustomField>