force-app/main/default/objects/Account/fields/Ocupaci_n__c.field-meta.xml
<CustomField>
    <fullName>Ocupaci_n__c</fullName>
    <label>Ocupación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Empleado</fullName>
            </value>
            <value>
                <fullName>Independiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>