force-app/main/default/objects/Account/fields/Origen_del_prospecto__c.field-meta.xml
<CustomField>
    <fullName>Origen_del_prospecto__c</fullName>
    <formula>TEXT(PersonLeadSource)</formula>
    <label>Origen del prospecto</label>
    <type>Text</type>
</CustomField>