force-app/main/default/objects/Account/fields/OtrosSeguros__c.field-meta.xml
<CustomField>
    <fullName>OtrosSeguros__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene otros seguros</label>
    <type>Checkbox</type>
</CustomField>