force-app/main/default/objects/Account/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <formula>CiudadCorrespondencia__r.Padre__r.Padre__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>País</label>
    <type>Text</type>
</CustomField>