force-app/main/default/objects/Account/fields/PaisGE__c.field-meta.xml
<CustomField>
    <fullName>PaisGE__c</fullName>
    <formula>CiudadCorrespondenciaGE__r.Padre__r.Padre__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>País</label>
    <type>Text</type>
</CustomField>