force-app/main/default/objects/Account/fields/PaisNacimientoCta__c.field-meta.xml
<CustomField>
    <fullName>PaisNacimientoCta__c</fullName>
    <formula>CiudadNacimientoCta__r.Padre__r.Padre__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>País de nacimiento</label>
    <type>Text</type>
</CustomField>