force-app/main/default/objects/Account/fields/ParientePublicamenteExpuesta__c.field-meta.xml
<CustomField>
    <fullName>ParientePublicamenteExpuesta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pariente persona públicamente expuesta</label>
    <type>Checkbox</type>
</CustomField>