force-app/main/default/objects/Account/fields/Perfil_Inicial_Tomador__c.field-meta.xml
<CustomField>
    <fullName>Perfil_Inicial_Tomador__c</fullName>
    <label>Perfil Inicial Tomador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Range</valueSetName>
    </valueSet>
</CustomField>