force-app/main/default/objects/Account/fields/PersonasCargo__c.field-meta.xml
<CustomField>
    <fullName>PersonasCargo__c</fullName>
    <label>Personas a cargo</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>