force-app/main/default/objects/Account/fields/Portafolio_de_productos__c.field-meta.xml
<CustomField>
    <fullName>Portafolio_de_productos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portafolio de productos</label>
    <type>Checkbox</type>
</CustomField>