force-app/main/default/objects/Account/fields/PreexistenciaMedicas__c.field-meta.xml
<CustomField>
    <fullName>PreexistenciaMedicas__c</fullName>
    <label>Preexistencia Médicas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>