force-app/main/default/objects/Account/fields/Previsora__c.field-meta.xml
<CustomField>
    <fullName>Previsora__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previsora</label>
    <type>Checkbox</type>
</CustomField>