force-app/main/default/objects/Account/fields/Productos_Global_Education__c.field-meta.xml
<CustomField>
    <fullName>Productos_Global_Education__c</fullName>
    <label>Productos Global Education</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plan Pregrado</fullName>
            </value>
            <value>
                <fullName>Plan Posgrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>