force-app/main/default/objects/Account/fields/Productos_Global_Seguros__c.field-meta.xml
<CustomField>
    <fullName>Productos_Global_Seguros__c</fullName>
    <label>Productos Global Seguros</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Seguro Vida Individual</fullName>
            </value>
            <value>
                <fullName>Seguro Vida Grupo</fullName>
            </value>
            <value>
                <fullName>Seguro Educativo</fullName>
            </value>
            <value>
                <fullName>Seguro de Pensiones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>