force-app/main/default/objects/Account/fields/ProductosAlternos__c.field-meta.xml
<CustomField>
    <fullName>ProductosAlternos__c</fullName>
    <label>Productos alternos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>