force-app/main/default/objects/Account/fields/ProspectodeCompania__c.field-meta.xml
<CustomField>
    <fullName>ProspectodeCompania__c</fullName>
    <label>Prospecto de la compañía</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global Seguros</fullName>
            </value>
            <value>
                <fullName>Global Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>