force-app/main/default/objects/Account/fields/ProximaFechaCumpleanos__c.field-meta.xml
<CustomField>
    <fullName>ProximaFechaCumpleanos__c</fullName>
    <formula>DATE(YEAR(Today()),MONTH(PersonBirthdate),DAY(PersonBirthdate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Próxima fecha de cumpleaños</label>
    <type>Date</type>
</CustomField>