force-app/main/default/objects/Account/fields/Respaldo__c.field-meta.xml
<CustomField>
    <fullName>Respaldo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Respaldo</label>
    <type>Checkbox</type>
</CustomField>