force-app/main/default/objects/Account/fields/Resultado_Briteverify__c.field-meta.xml
<CustomField>
    <fullName>Resultado_Briteverify__c</fullName>
    <description>Este campo indica el resultado que se obtuvo después de generar un proceso de Briteverify, con el fin de determinar que correos son correctos y cuales no.</description>
    <label>Resultado Briteverify</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Correo Invalido</fullName>
            </value>
            <value>
                <fullName>Correo Valido</fullName>
            </value>
            <value>
                <fullName>Dominio Correcto</fullName>
            </value>
            <value>
                <fullName>Dominio Invalido</fullName>
            </value>
            <value>
                <fullName>Sin Determinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>