force-app/main/default/objects/Account/fields/RSA__c.field-meta.xml
<CustomField>
    <fullName>RSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RSA</label>
    <type>Checkbox</type>
</CustomField>