force-app/main/default/objects/Account/fields/Salud__c.field-meta.xml
<CustomField>
    <fullName>Salud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salud</label>
    <type>Checkbox</type>
</CustomField>