force-app/main/default/objects/Account/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Ocupaci_n__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Educación</fullName>
            </value>
            <value>
                <fullName>Financiero</fullName>
            </value>
            <value>
                <fullName>Real</fullName>
            </value>
            <value>
                <fullName>Salud</fullName>
            </value>
            <value>
                <fullName>Ama de Casa</fullName>
            </value>
            <value>
                <fullName>Finca Raíz</fullName>
            </value>
            <value>
                <fullName>Medicina Pre-pagada</fullName>
            </value>
            <value>
                <fullName>Pensionado</fullName>
            </value>
            <value>
                <fullName>Seguros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>