force-app/main/default/objects/Account/fields/SegundoApellido__c.field-meta.xml
<CustomField>
    <fullName>SegundoApellido__c</fullName>
    <label>Segundo apellido</label>
    <length>80</length>
    <type>Text</type>
</CustomField>