force-app/main/default/objects/Account/fields/Seguridad_Social__c.field-meta.xml
<CustomField>
    <fullName>Seguridad_Social__c</fullName>
    <label>Seguridad Social</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>