force-app/main/default/objects/Account/fields/Sura__c.field-meta.xml
<CustomField>
    <fullName>Sura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sura</label>
    <type>Checkbox</type>
</CustomField>