force-app/main/default/objects/Account/fields/TelefonoCorrespondenciaOficina__c.field-meta.xml
<CustomField>
    <fullName>TelefonoCorrespondenciaOficina__c</fullName>
    <label>Teléfono correspondencia oficina</label>
    <type>Phone</type>
</CustomField>