force-app/main/default/objects/Account/fields/TelefonoCorrespondenciaOficinaGE__c.field-meta.xml
<CustomField>
    <fullName>TelefonoCorrespondenciaOficinaGE__c</fullName>
    <label>Teléfono correspondencia oficina</label>
    <type>Phone</type>
</CustomField>