force-app/main/default/objects/Account/fields/TelefonoCorrespondenciaResidenciaGE__c.field-meta.xml
<CustomField>
    <fullName>TelefonoCorrespondenciaResidenciaGE__c</fullName>
    <label>Teléfono correspondencia residencia</label>
    <type>Phone</type>
</CustomField>