force-app/main/default/objects/Account/fields/tester__c.field-meta.xml
<CustomField>
    <fullName>tester__c</fullName>
    <label>tester</label>
    <length>250</length>
    <type>Text</type>
</CustomField>