force-app/main/default/objects/Account/fields/tiene_contratos_de_exclusividad__c.field-meta.xml
<CustomField>
    <fullName>tiene_contratos_de_exclusividad__c</fullName>
    <label>Tiene contratos de exclusividad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>