force-app/main/default/objects/Account/fields/Tiene_otras_actividades__c.field-meta.xml
<CustomField>
    <fullName>Tiene_otras_actividades__c</fullName>
    <label>Tiene otras actividades</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>