force-app/main/default/objects/Account/fields/Tipo_de_Agente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Agente__c</fullName>
    <label>Tipo de Agente</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sector__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agencia de Seguros</fullName>
            </value>
            <value>
                <fullName>Agente Independiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>