force-app/main/default/objects/Account/fields/TipoDocumento__c.field-meta.xml
<CustomField>
    <fullName>TipoDocumento__c</fullName>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEDULA DE CIUDADANIA</fullName>
            </value>
            <value>
                <fullName>CEDULA DE EXTRANJERIA</fullName>
            </value>
            <value>
                <fullName>NIT</fullName>
            </value>
            <value>
                <fullName>PASAPORTE</fullName>
            </value>
            <value>
                <fullName>REGISTRO CIVIL</fullName>
            </value>
            <value>
                <fullName>TARJETA DE IDENTIDAD</fullName>
            </value>
            <value>
                <fullName>PERMISO ESPECIAL PERMANENCIA</fullName>
            </value>
            <value>
                <fullName>PERMISO PROTECCION TEMPORAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>