force-app/main/default/objects/Account/fields/TipoPersona__c.field-meta.xml
<CustomField>
    <fullName>TipoPersona__c</fullName>
    <label>Tipo de persona</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Natural</fullName>
            </value>
            <value>
                <fullName>Jurídica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>