force-app/main/default/objects/Account/fields/TipoVinculacionLaboral__c.field-meta.xml
<CustomField>
    <fullName>TipoVinculacionLaboral__c</fullName>
    <label>Tipo de vinculación laboral</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SOCIO</fullName>
            </value>
            <value>
                <fullName>ASALARIADO</fullName>
            </value>
            <value>
                <fullName>INDEPENDIENTE</fullName>
            </value>
            <value>
                <fullName>ASALARIADO E INDEPENDIENTE</fullName>
            </value>
            <value>
                <fullName>OTRO</fullName>
            </value>
            <value>
                <fullName>EMPRESA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>