force-app/main/default/objects/Account/fields/Transporte__c.field-meta.xml
<CustomField>
    <fullName>Transporte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transporte</label>
    <type>Checkbox</type>
</CustomField>