force-app/main/default/objects/Account/fields/Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>Ubicacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ubicacion</label>
    <referenceTo>Ubicacion__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>